# Veritas

./: .gitignore  CHANGELOG.md  GITHUB_ABOUT.txt  README.md  README.pt-BR.md  Veritas GUI.bat  aplicativo.html  aplicativo.txt  backup_now.ps1  decode-app.html  payload-deobfuscator.html  push_to_github.ps1  test-small.html
.github/workflows/: ci.yml  release.yml
docs/: MASTER_PLAN_V1.md  PROJECT_BRIEF.md  UI_MODERNIZATION_PLAN.md  architecture-decisions.md
docs/pt-BR/: MASTER_PLAN_V1.md  PROJECT_BRIEF.md
ps-deobfuscator/: .gitignore  CHANGELOG.md  README.md  build_windows.bat  main_gui.py  pyproject.toml
ps-deobfuscator/gui/: __init__.py  __main__.py  app_icon.py  main.py  main_window.py  themes.py
ps-deobfuscator/gui/widgets/: __init__.py  decode_panel.py  flow_layout.py  history_panel.py  manual_panel.py  toast.py
ps-deobfuscator/ps_deobfuscator/: __init__.py  __main__.py  app_info.py  cli.py  engine.py  history.py
ps-deobfuscator/samples/: README.md
ps-deobfuscator/samples/known-good/: ascii85_adobe.txt  base64_gzip.txt  base64_plaintext_alphabet_regression.txt  base64_readme_example.txt  base64_utf16le.txt  base64_utf8.txt  encodedcommand.txt  html_entities.txt  js_fromcharcode.txt  jwt_hs256.txt  url_encoded.txt
ps-deobfuscator/scripts/: build_app_icon.py  build_exe.py  check_gui_layout.py  clean.py  export_debug_vital.py  pyinstaller_gui.ps1  run_samples.py
ps-deobfuscator/tests/: test_engine.py  test_history.py  test_smoke_imports.py
ps-deobfuscator/tests/fixtures/: payloads.json
release/: README.txt
scripts/: git-init-and-push.ps1  set-github-topics.ps1  set-github-topics.sh
web/: README.md  payload-deobfuscator.html
