[project]
name = "ps-deobfuscator"
version = "0.8.0"
description = "Recursive payload deobfuscator (URL, Hex, Base64, Base32, Ascii85, GZIP, JWT, char-codes) with IOC extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.0.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.6.0",
]
dev = [
  "pillow>=10.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
ps-deobfuscator = "ps_deobfuscator.cli:main"

# gui-scripts creates a windowed executable: double-click opens the app
# directly, with no console window behind it.
[project.gui-scripts]
ps-deobfuscator-gui = "main_gui:run_app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main_gui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ps_deobfuscator*", "gui*"]

[tool.setuptools.package-data]
gui = ["resources/*.svg", "resources/*.ico", "resources/fonts/*.ttf", "resources/fonts/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scripts/export_debug_vital.py"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B),
# comprehensions (C4). Pragmatic ruleset for a Qt app.
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # long lines are handled by the formatter, not enforced hard

[tool.mypy]
# Type-check the pure logic package only; the PySide6 layer has too many
# dynamic Qt stubs to check cleanly and is exercised by the layout script.
files = ["ps_deobfuscator"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
